2000-08-07  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-cmail.el (mhc-cmail-dummy-file): New variable.
	(Thanks to Mr. WATANABE Hirofumi)
	(mhc-cmail/schedule-foldermsg): Use mhc-cmail-dummy-file instead of
	'/dev/null'.
	(cmail-get-page-number-from-summary): Ditto.

	* emacs/mhc.el (mhc-mode-menu-spec): 'Sync' enable safer.

	* emacs/mhc-sync (toplevel): Add Date keyword.

	* emacs/mhc-calendar.el (mhc-calendar-input-exit): New function.
	(mhc-calendar-date-noduration): New variable.
	(mhc-draft-insert-calendar): mhc-calendar-date-noduration set t, if
	called in area of X-SC-Day:.
	(mhc-calendar/get-day-region): If mhc-calendar-date-noduration is t,
	insert days as break down.
	(mhc-calendar): Not autoload.
	(mhc-calendar-insert-summary-contents): Don't bind mhc-mailer-type.
	(mhc-calendar-eword-decode-string): Remove.

	* emacs/mhc-minibuf.el (mhc-input-day): Call mhc-calendar-input-exit()
	when exit.

	* emacs/mhc-draft.el (mhc-draft-kill): Ditto.
	(mhc-draft-finish): Ditto.

	* emacs/mhc-ps.el (mhc-ps/schedule-to-string): Always set
	mhc-ps-left-margin when mhc-ps/compose-subject call.

2000-08-07  Yoshinari NOMURA  <nom@quickhack.net>

	* emacs/mhc-cmail.el (mhc-cmail-setup):
	add mhc-mode to cmail-folders-mode-hook.

	* emacs/mhc-cmail.el (mhc-cmail-setup ):
	add-hook 'cmail-quit-hook 'mhc-exit.

	* emacs/mhc-cmail.el (cmail-get-page-number-from-summary):
	return "/dev/null" if no filename
	was found.

2000-08-06  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-guess.el (toplevel): set -> defvar.

2000-08-05  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-minibuf.el (mhc-minibuf/date-to-string):
	deal with duration.
	(mhc-minibuf/time-to-string): ditto.

	* emacs/mhc-guess.el (mhc-guess-time, mhc-guess-date):
	becomes to guess a duration.

	* emacs/mhc-date.el (mhc-time+,mhc-time-): New function.

	* gemcal.in (MhcCalendar::scan):
	tooltip not to be squeezed in one line.

	* ruby-ext/extconf.rb.in, configure.rb, mhc-make.rb: