@@ -1,3 +1,8 @@
+2000-08-08  Hideyuki SHIRAI  <shirai@quickhack.net>
+
+	* emacs/mhc-mew.el (mhc-mew-eword-decode-string): Fix broken
+	match-data.
+
 2000-08-07  Hideyuki SHIRAI  <shirai@quickhack.net>
 
 	* emacs/mhc-cmail.el (mhc-cmail-dummy-file): New variable.
